test/oscar/compiler/errors/modMismatch.oscar
def main() => unit = {
  Println(3.0 % 2.0);
}